--- a/OMapsRoutesWithCards.html
+++ b/OMapsRoutesWithCards.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="reset.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="flexboxgrid.min.css" />
+    <script src="cards-prototype.js"></script>
 </head>
 
 <body style="margin: 0; background: #ffffff">
@@ -49,7 +50,7 @@
                         <div class="occupations-heading technical-occupations-heading">
                             <h3>Technical Occupations</h3>
                         </div>
-                        <div class="occupations-text">
+                        <div class="occupations-text occupations-text__with-border">
                             <p>
                                 Skilled occupations that a college leaver or an apprentice would be entering. Typically
                                 require
@@ -67,7 +68,7 @@
                         <div class="occupations-heading technical-occupations-heading">
                             <h3>Technical Occupations</h3>
                         </div>
-                        <div class="occupations-text">
+                        <div class="occupations-text occupations-text__with-border">
                             <p>
                                 Require more knowledge and skills acquired through experience in the workplace or
                                 further
@@ -86,7 +87,7 @@
                         <div class="occupations-heading technical-occupations-heading">
                             <h3>Professional Occupations</h3>
                         </div>
-                        <div class="occupations-text">
+                        <div class="occupations-text occupations-text__with-border">
                             <p>
                                 Occupations where there is a clear career progression from higher technical occupations,
                                 as
@@ -123,6 +124,9 @@
                                             Source, format and present data securely in a relevant way for analysis
                                             using basic methods.
                                         </p>
+                                    </div>
+                                    <div class="small-card">
+                                        <p class="card-title">Data Technician</p>
                                     </div>
                                 </div>
                                 <div class="omaps-chevron">
