mostly working ok

--- a/OMapsRoutesWithCards.html
+++ b/OMapsRoutesWithCards.html
@@ -189,6 +189,11 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <div
+                                class="omaps-occupations omaps-occupations--empty-column omaps-occupations--empty-column__hidden">
+
+                            </div>
                         </div>
                     </section>
                 </div>
