--- a/OMapsRoutesWithCards.html
+++ b/OMapsRoutesWithCards.html
@@ -120,7 +120,7 @@
                                         <h3>Data Analyst Technician</h3>
                                     </div>
                                     <div class="occupations-text">
-                                        <p>
+                                        <p class="occupations-text-paragraph">
                                             Source, format and present data securely in a relevant way for analysis
                                             using basic methods.
                                         </p>
@@ -146,7 +146,7 @@
                                         <h3>Data Analyst Advanced Technician</h3>
                                     </div>
                                     <div class="occupations-text">
-                                        <p>
+                                        <p class="occupations-text-paragraph">
                                             Collect, organise and analyse data to provide business insights using
                                             extensive knowledge of data solutions,
                                             database systems and analytical tools
@@ -173,7 +173,7 @@
                                         <h3>Business Information Professional</h3>
                                     </div>
                                     <div class="occupations-text">
-                                        <p>
+                                        <p class="occupations-text-paragraph">
                                             Provide and implement data technology enabled solutions to support internal
                                             and external customers.
                                         </p>
@@ -190,9 +190,7 @@
                                 </div>
                             </div>
 
-                            <div
-                                class="omaps-occupations omaps-occupations--empty-column omaps-occupations--empty-column__hidden">
-
+                            <div class="omaps-occupations omaps-occupations--empty-column">
                             </div>
                         </div>
                     </section>
