--- a/OMapsRoutesWithCards.html
+++ b/OMapsRoutesWithCards.html
@@ -132,7 +132,22 @@
                                             <path
                                                 d="m194.800781 164.769531 128.210938-128.214843c8.34375-8.339844 8.34375-21.824219 0-30.164063-8.339844-8.339844-21.824219-8.339844-30.164063 0l-128.214844 128.214844-128.210937-128.214844c-8.34375-8.339844-21.824219-8.339844-30.164063 0-8.34375 8.339844-8.34375 21.824219 0 30.164063l128.210938 128.214843-128.210938 128.214844c-8.34375 8.339844-8.34375 21.824219 0 30.164063 4.15625 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921875-2.089844 15.082031-6.25l128.210937-128.214844 128.214844 128.214844c4.160156 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921874-2.089844 15.082031-6.25 8.34375-8.339844 8.34375-21.824219 0-30.164063zm0 0" />
                                         </svg>
-                                        <p class="card-title">Data Technician</p>
+
+                                        <p class="card-title">Data Technician
+                                            <svg class="heart-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
+                                                width="14pt" height="12pt" viewBox="0 0 40.000000 37.000000"
+                                                preserveAspectRatio="xMidYMid meet">
+
+                                                <g transform="translate(0.000000,37.000000) scale(0.100000,-0.100000)"
+                                                    fill="#000000" stroke="none">
+                                                    <path d="M83 363 c-29 -6 -70 -48 -76 -79 -11 -61 22 -117 136 -223 l58 -55
+                                                        80 80 c89 87 111 121 112 170 2 88 -93 139 -168 90 -22 -14 -28 -15 -47 -2
+                                                        -28 17 -65 24 -95 19z m80 -53 c14 -11 30 -20 37 -20 7 0 23 9 37 20 31 24 80
+                                                        26 105 3 28 -25 23 -83 -10 -129 -29 -40 -119 -124 -132 -124 -13 0 -103 84
+                                                        -132 124 -32 45 -37 99 -11 128 21 24 74 23 106 -2z" />
+                                                </g>
+                                            </svg>
+                                        </p>
                                     </div>
                                 </div>
                                 <div class="omaps-chevron">
@@ -159,7 +174,21 @@
                                             <path
                                                 d="m194.800781 164.769531 128.210938-128.214843c8.34375-8.339844 8.34375-21.824219 0-30.164063-8.339844-8.339844-21.824219-8.339844-30.164063 0l-128.214844 128.214844-128.210937-128.214844c-8.34375-8.339844-21.824219-8.339844-30.164063 0-8.34375 8.339844-8.34375 21.824219 0 30.164063l128.210938 128.214843-128.210938 128.214844c-8.34375 8.339844-8.34375 21.824219 0 30.164063 4.15625 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921875-2.089844 15.082031-6.25l128.210937-128.214844 128.214844 128.214844c4.160156 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921874-2.089844 15.082031-6.25 8.34375-8.339844 8.34375-21.824219 0-30.164063zm0 0" />
                                         </svg>
-                                        <p class="card-title">Data Analyst</p>
+                                        <p class="card-title">Data Analyst
+                                            <svg class="heart-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
+                                                width="14pt" height="12pt" viewBox="0 0 40.000000 37.000000"
+                                                preserveAspectRatio="xMidYMid meet">
+
+                                                <g transform="translate(0.000000,37.000000) scale(0.100000,-0.100000)"
+                                                    fill="#000000" stroke="none">
+                                                    <path d="M83 363 c-29 -6 -70 -48 -76 -79 -11 -61 22 -117 136 -223 l58 -55
+                                                        80 80 c89 87 111 121 112 170 2 88 -93 139 -168 90 -22 -14 -28 -15 -47 -2
+                                                        -28 17 -65 24 -95 19z m80 -53 c14 -11 30 -20 37 -20 7 0 23 9 37 20 31 24 80
+                                                        26 105 3 28 -25 23 -83 -10 -129 -29 -40 -119 -124 -132 -124 -13 0 -103 84
+                                                        -132 124 -32 45 -37 99 -11 128 21 24 74 23 106 -2z" />
+                                                </g>
+                                            </svg>
+                                        </p>
                                     </div>
                                 </div>
                                 <div class="omaps-chevron">
@@ -185,7 +214,21 @@
                                             <path
                                                 d="m194.800781 164.769531 128.210938-128.214843c8.34375-8.339844 8.34375-21.824219 0-30.164063-8.339844-8.339844-21.824219-8.339844-30.164063 0l-128.214844 128.214844-128.210937-128.214844c-8.34375-8.339844-21.824219-8.339844-30.164063 0-8.34375 8.339844-8.34375 21.824219 0 30.164063l128.210938 128.214843-128.210938 128.214844c-8.34375 8.339844-8.34375 21.824219 0 30.164063 4.15625 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921875-2.089844 15.082031-6.25l128.210937-128.214844 128.214844 128.214844c4.160156 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921874-2.089844 15.082031-6.25 8.34375-8.339844 8.34375-21.824219 0-30.164063zm0 0" />
                                         </svg>
-                                        <p class="card-title">Data Scientist</p>
+                                        <p class="card-title">Data Scientist
+                                            <svg class="heart-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
+                                                width="14pt" height="12pt" viewBox="0 0 40.000000 37.000000"
+                                                preserveAspectRatio="xMidYMid meet">
+
+                                                <g transform="translate(0.000000,37.000000) scale(0.100000,-0.100000)"
+                                                    fill="#000000" stroke="none">
+                                                    <path d="M83 363 c-29 -6 -70 -48 -76 -79 -11 -61 22 -117 136 -223 l58 -55
+                                                        80 80 c89 87 111 121 112 170 2 88 -93 139 -168 90 -22 -14 -28 -15 -47 -2
+                                                        -28 17 -65 24 -95 19z m80 -53 c14 -11 30 -20 37 -20 7 0 23 9 37 20 31 24 80
+                                                        26 105 3 28 -25 23 -83 -10 -129 -29 -40 -119 -124 -132 -124 -13 0 -103 84
+                                                        -132 124 -32 45 -37 99 -11 128 21 24 74 23 106 -2z" />
+                                                </g>
+                                            </svg>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
