--- a/OMapsRoutesWithCards.html
+++ b/OMapsRoutesWithCards.html
@@ -229,6 +229,20 @@
                                                 </g>
                                             </svg>
                                         </p>
+
+                                        <div class="hidden-card-content">
+                                            <h2>Overview of the role</h2>
+                                            <p>Working in a team to find ways to improve an organisation's processes.
+                                            </p>
+                                            <h2>Occupation summary</h2>
+                                            <p>Data Science is a broad and fast-moving field spanning maths and
+                                                statistics, software engineering and communications. Data Scientists
+                                                blend experience and knowledge from a wide range of fields and
+                                                organisations, and continuously seek to expand their range of technical
+                                                skills.
+                                            </p>
+                                        </div>
+
                                     </div>
                                 </div>
                             </div>
