--- a/OMapsRoutesWithCards.html
+++ b/OMapsRoutesWithCards.html
@@ -58,7 +58,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="omaps-chevron">
+                    <div class="omaps-chevron omaps-chevron__top">
                         test
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="omaps-chevron">
+                    <div class="omaps-chevron omaps-chevron__top">
                         test
                     </div>
                 </div>
@@ -132,22 +132,59 @@
                                             <path
                                                 d="m194.800781 164.769531 128.210938-128.214843c8.34375-8.339844 8.34375-21.824219 0-30.164063-8.339844-8.339844-21.824219-8.339844-30.164063 0l-128.214844 128.214844-128.210937-128.214844c-8.34375-8.339844-21.824219-8.339844-30.164063 0-8.34375 8.339844-8.34375 21.824219 0 30.164063l128.210938 128.214843-128.210938 128.214844c-8.34375 8.339844-8.34375 21.824219 0 30.164063 4.15625 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921875-2.089844 15.082031-6.25l128.210937-128.214844 128.214844 128.214844c4.160156 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921874-2.089844 15.082031-6.25 8.34375-8.339844 8.34375-21.824219 0-30.164063zm0 0" />
                                         </svg>
-
                                         <p class="card-title">Data Technician
-                                            <svg class="heart-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
-                                                width="14pt" height="12pt" viewBox="0 0 40.000000 37.000000"
-                                                preserveAspectRatio="xMidYMid meet">
-
-                                                <g transform="translate(0.000000,37.000000) scale(0.100000,-0.100000)"
-                                                    fill="#000000" stroke="none">
-                                                    <path d="M83 363 c-29 -6 -70 -48 -76 -79 -11 -61 22 -117 136 -223 l58 -55
-                                                        80 80 c89 87 111 121 112 170 2 88 -93 139 -168 90 -22 -14 -28 -15 -47 -2
-                                                        -28 17 -65 24 -95 19z m80 -53 c14 -11 30 -20 37 -20 7 0 23 9 37 20 31 24 80
-                                                        26 105 3 28 -25 23 -83 -10 -129 -29 -40 -119 -124 -132 -124 -13 0 -103 84
-                                                        -132 124 -32 45 -37 99 -11 128 21 24 74 23 106 -2z" />
+                                            <svg class="heart-icon" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                                preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="39"
+                                                height="39">
+                                                <defs>
+                                                    <path class="heart-icon--path"
+                                                        d="M413.65 183.81C457.46 183.81 492.97 216.49 492.97 256.81C492.97 368.46 334.34 423.87 334.34 426.94C334.34 426.94 334.34 426.94 334.34 426.94C334.34 423.87 175.7 368.46 175.7 256.8C175.7 216.49 211.21 183.8 255.02 183.8C298.82 183.8 334.34 212.44 334.33 252.76C334.33 212.45 369.84 183.81 413.65 183.81Z"
+                                                        id="b3bqRKh6Wx"></path>
+                                                </defs>
+                                                <g>
+                                                    <g>
+                                                        <g>
+                                                            <use xlink:href="#b3bqRKh6Wx" opacity="1" fill="#ffffff"
+                                                                fill-opacity="1"></use>
+                                                            <g>
+                                                                <use xlink:href="#b3bqRKh6Wx" opacity="1"
+                                                                    fill-opacity="0" stroke="#000000" stroke-width="7"
+                                                                    stroke-opacity="1"></use>
+                                                            </g>
+                                                        </g>
+                                                    </g>
                                                 </g>
                                             </svg>
                                         </p>
+
+                                        <div class="hidden-card-content">
+                                            <h2>Overview of the role</h2>
+                                            <p>Source, format and present data securely in a relevant way for analysis.
+                                            </p>
+                                            <h2>Occupation summary</h2>
+                                            <p> This occupation is found in all sectors where data is
+                                                generated or processed including but not limited to finance, retail,
+                                                education, health, media, manufacturing and hospitality. The broad
+                                                purpose of the occupation is to source, format and present data securely
+                                                in a relevant way for analysis using basic methods; to communicate
+                                                outcomes appropriate to the audience; analyse structured and
+                                                unstructured data to support business outcomes; blend data from multiple
+                                                sources as directed and apply legal and ethical principles when
+                                                manipulating data.
+                                            </p>
+                                            <a class="read-more--button">
+                                                <p>Read more</p>
+                                            </a>
+                                            <h2>Links to technical education programmes</h2>
+                                            <div class="blue-pill-container">
+                                                <div class="blue-pill">A</div>
+                                                <div class="technical-education-role--container">
+                                                    <a class="technical-education-role">Data Technician (LV 3)</a>
+                                                </div>
+                                                <p class="technical-education-status">Approved for delivery</p>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="omaps-chevron">
@@ -174,21 +211,58 @@
                                             <path
                                                 d="m194.800781 164.769531 128.210938-128.214843c8.34375-8.339844 8.34375-21.824219 0-30.164063-8.339844-8.339844-21.824219-8.339844-30.164063 0l-128.214844 128.214844-128.210937-128.214844c-8.34375-8.339844-21.824219-8.339844-30.164063 0-8.34375 8.339844-8.34375 21.824219 0 30.164063l128.210938 128.214843-128.210938 128.214844c-8.34375 8.339844-8.34375 21.824219 0 30.164063 4.15625 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921875-2.089844 15.082031-6.25l128.210937-128.214844 128.214844 128.214844c4.160156 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921874-2.089844 15.082031-6.25 8.34375-8.339844 8.34375-21.824219 0-30.164063zm0 0" />
                                         </svg>
-                                        <p class="card-title">Data Analyst
-                                            <svg class="heart-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
-                                                width="14pt" height="12pt" viewBox="0 0 40.000000 37.000000"
-                                                preserveAspectRatio="xMidYMid meet">
-
-                                                <g transform="translate(0.000000,37.000000) scale(0.100000,-0.100000)"
-                                                    fill="#000000" stroke="none">
-                                                    <path d="M83 363 c-29 -6 -70 -48 -76 -79 -11 -61 22 -117 136 -223 l58 -55
-                                                        80 80 c89 87 111 121 112 170 2 88 -93 139 -168 90 -22 -14 -28 -15 -47 -2
-                                                        -28 17 -65 24 -95 19z m80 -53 c14 -11 30 -20 37 -20 7 0 23 9 37 20 31 24 80
-                                                        26 105 3 28 -25 23 -83 -10 -129 -29 -40 -119 -124 -132 -124 -13 0 -103 84
-                                                        -132 124 -32 45 -37 99 -11 128 21 24 74 23 106 -2z" />
+                                        <p class="card-title">Data Scientist
+                                            <svg class="heart-icon" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                                preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="39"
+                                                height="39">
+                                                <defs>
+                                                    <path class="heart-icon--path"
+                                                        d="M413.65 183.81C457.46 183.81 492.97 216.49 492.97 256.81C492.97 368.46 334.34 423.87 334.34 426.94C334.34 426.94 334.34 426.94 334.34 426.94C334.34 423.87 175.7 368.46 175.7 256.8C175.7 216.49 211.21 183.8 255.02 183.8C298.82 183.8 334.34 212.44 334.33 252.76C334.33 212.45 369.84 183.81 413.65 183.81Z"
+                                                        id="b3bqRKh6Wxxwece"></path>
+                                                </defs>
+                                                <g>
+                                                    <g>
+                                                        <g>
+                                                            <use xlink:href="#b3bqRKh6Wxxwece" opacity="1"
+                                                                fill="#ffffff" fill-opacity="1"></use>
+                                                            <g>
+                                                                <use xlink:href="#b3bqRKh6Wxxwece" opacity="1"
+                                                                    fill-opacity="0" stroke="#000000" stroke-width="7"
+                                                                    stroke-opacity="1"></use>
+                                                            </g>
+                                                        </g>
+                                                    </g>
                                                 </g>
                                             </svg>
                                         </p>
+
+                                        <div class="hidden-card-content">
+                                            <h2>Overview of the role</h2>
+                                            <p>Collect, organise and study data to provide business insight.
+                                            </p>
+                                            <h2>Occupation summary</h2>
+                                            <p> The primary role of a Data Analyst is to collect,
+                                                organise and study data to provide business insight. Data analysts are
+                                                typically involved with managing, cleansing, abstracting and aggregating
+                                                data, and conducting a range of analytical studies on that data. They
+                                                work across a variety of projects, providing technical data solutions to
+                                                a range of stakeholders/customers issues. They document and report the
+                                                results of data analysis activities making recommendations to improve
+                                                business performance.
+                                            </p>
+                                            <a class="read-more--button">
+                                                <p>Read more</p>
+                                            </a>
+                                            <h2>Links to technical education programmes</h2>
+                                            <div class="blue-pill-container">
+                                                <div class="blue-pill">A</div>
+                                                <div class="technical-education-role--container">
+                                                    <a class="technical-education-role">Data Analyst (LV 4)</a>
+                                                </div>
+                                                <p class="technical-education-status">Approved for delivery</p>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="omaps-chevron">
@@ -215,17 +289,27 @@
                                                 d="m194.800781 164.769531 128.210938-128.214843c8.34375-8.339844 8.34375-21.824219 0-30.164063-8.339844-8.339844-21.824219-8.339844-30.164063 0l-128.214844 128.214844-128.210937-128.214844c-8.34375-8.339844-21.824219-8.339844-30.164063 0-8.34375 8.339844-8.34375 21.824219 0 30.164063l128.210938 128.214843-128.210938 128.214844c-8.34375 8.339844-8.34375 21.824219 0 30.164063 4.15625 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921875-2.089844 15.082031-6.25l128.210937-128.214844 128.214844 128.214844c4.160156 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921874-2.089844 15.082031-6.25 8.34375-8.339844 8.34375-21.824219 0-30.164063zm0 0" />
                                         </svg>
                                         <p class="card-title">Data Scientist
-                                            <svg class="heart-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
-                                                width="14pt" height="12pt" viewBox="0 0 40.000000 37.000000"
-                                                preserveAspectRatio="xMidYMid meet">
-
-                                                <g transform="translate(0.000000,37.000000) scale(0.100000,-0.100000)"
-                                                    fill="#000000" stroke="none">
-                                                    <path d="M83 363 c-29 -6 -70 -48 -76 -79 -11 -61 22 -117 136 -223 l58 -55
-                                                        80 80 c89 87 111 121 112 170 2 88 -93 139 -168 90 -22 -14 -28 -15 -47 -2
-                                                        -28 17 -65 24 -95 19z m80 -53 c14 -11 30 -20 37 -20 7 0 23 9 37 20 31 24 80
-                                                        26 105 3 28 -25 23 -83 -10 -129 -29 -40 -119 -124 -132 -124 -13 0 -103 84
-                                                        -132 124 -32 45 -37 99 -11 128 21 24 74 23 106 -2z" />
+                                            <svg class="heart-icon" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                                preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="39"
+                                                height="39">
+                                                <defs>
+                                                    <path class="heart-icon--path"
+                                                        d="M413.65 183.81C457.46 183.81 492.97 216.49 492.97 256.81C492.97 368.46 334.34 423.87 334.34 426.94C334.34 426.94 334.34 426.94 334.34 426.94C334.34 423.87 175.7 368.46 175.7 256.8C175.7 216.49 211.21 183.8 255.02 183.8C298.82 183.8 334.34 212.44 334.33 252.76C334.33 212.45 369.84 183.81 413.65 183.81Z"
+                                                        id="b3bqRKh6Wx-3"></path>
+                                                </defs>
+                                                <g>
+                                                    <g>
+                                                        <g>
+                                                            <use xlink:href="#b3bqRKh6Wx-3" opacity="1" fill="#ffffff"
+                                                                fill-opacity="1"></use>
+                                                            <g>
+                                                                <use xlink:href="#b3bqRKh6Wx-3" opacity="1"
+                                                                    fill-opacity="0" stroke="#000000" stroke-width="7"
+                                                                    stroke-opacity="1"></use>
+                                                            </g>
+                                                        </g>
+                                                    </g>
                                                 </g>
                                             </svg>
                                         </p>
@@ -241,8 +325,19 @@
                                                 organisations, and continuously seek to expand their range of technical
                                                 skills.
                                             </p>
+                                            <a class="read-more--button">
+                                                <p>Read more</p>
+                                            </a>
+                                            <h2>Links to technical education programmes</h2>
+                                            <div class="blue-pill-container">
+                                                <div class="blue-pill">A</div>
+                                                <div class="technical-education-role--container">
+                                                    <a class="technical-education-role">Data Scientist (LV 6)</a>
+                                                    <p class="degree-type">Degree: Integrated degree</p>
+                                                </div>
+                                                <p class="technical-education-status">Approved for delivery</p>
+                                            </div>
                                         </div>
-
                                     </div>
                                 </div>
                             </div>
