--- a/OMapsRoutesWithCards.html
+++ b/OMapsRoutesWithCards.html
@@ -12,29 +12,31 @@
 </head>
 
 <body style="margin: 0; background: #ffffff">
-    <div class="omaps-nav">
-        <div class="row middle-xs between-xs omaps-nav-row">
-            <div class="col-xs-5 ifa-logo-container">
-                <div class="ifa-logo"></div>
-                <h1 class="titleopensans-normal-white-36px">Occupational maps</h1>
-            </div>
+    <div class="omaps-nav-container">
+        <div class="omaps-nav">
+            <div class="row middle-xs between-xs omaps-nav-row">
+                <div class="col-xs-5 ifa-logo-container">
+                    <div class="ifa-logo"></div>
+                    <h1 class="titleopensans-normal-white-36px">Occupational maps</h1>
+                </div>
 
-            <div class="omaps-nav-menu col-xs-6">
-                <a>
-                    <h2>Search</h2>
-                </a>
-                <a>
-                    <h2>Help</h2>
-                </a>
-                <a>
-                    <h2>Settings</h2>
-                </a>
-                <a>
-                    <h2>Export</h2>
-                </a>
-                <a>
-                    <h2>Account</h2>
-                </a>
+                <div class="omaps-nav-menu col-xs-6">
+                    <a>
+                        <h2>Search</h2>
+                    </a>
+                    <a>
+                        <h2>Help</h2>
+                    </a>
+                    <a>
+                        <h2>Settings</h2>
+                    </a>
+                    <a>
+                        <h2>Export</h2>
+                    </a>
+                    <a>
+                        <h2>Account</h2>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -158,6 +160,10 @@
                                             </svg>
                                         </p>
 
+                                        <div class="blue-pill__small-card-container">
+                                            <div class="blue-pill">A</div>
+                                        </div>
+
                                         <div class="hidden-card-content">
                                             <h2>Overview of the role</h2>
                                             <p>Source, format and present data securely in a relevant way for analysis.
@@ -211,7 +217,7 @@
                                             <path
                                                 d="m194.800781 164.769531 128.210938-128.214843c8.34375-8.339844 8.34375-21.824219 0-30.164063-8.339844-8.339844-21.824219-8.339844-30.164063 0l-128.214844 128.214844-128.210937-128.214844c-8.34375-8.339844-21.824219-8.339844-30.164063 0-8.34375 8.339844-8.34375 21.824219 0 30.164063l128.210938 128.214843-128.210938 128.214844c-8.34375 8.339844-8.34375 21.824219 0 30.164063 4.15625 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921875-2.089844 15.082031-6.25l128.210937-128.214844 128.214844 128.214844c4.160156 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921874-2.089844 15.082031-6.25 8.34375-8.339844 8.34375-21.824219 0-30.164063zm0 0" />
                                         </svg>
-                                        <p class="card-title">Data Scientist
+                                        <p class="card-title">Data Analyst
                                             <svg class="heart-icon" version="1.1" xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink"
                                                 preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="39"
@@ -236,6 +242,9 @@
                                                 </g>
                                             </svg>
                                         </p>
+                                        <div class="blue-pill__small-card-container">
+                                            <div class="blue-pill">A</div>
+                                        </div>
 
                                         <div class="hidden-card-content">
                                             <h2>Overview of the role</h2>
@@ -313,6 +322,10 @@
                                                 </g>
                                             </svg>
                                         </p>
+
+                                        <div class="blue-pill__small-card-container">
+                                            <div class="blue-pill">A</div>
+                                        </div>
 
                                         <div class="hidden-card-content">
                                             <h2>Overview of the role</h2>
