--- a/OMapsRoutesWithCards.html
+++ b/OMapsRoutesWithCards.html
@@ -27,7 +27,7 @@
                     <a>
                         <h2>Help</h2>
                     </a>
-                    <a>
+                    <a id="settings-button">
                         <h2>Settings</h2>
                     </a>
                     <a>
@@ -129,6 +129,36 @@
                 </div>
             </div>
         </div>
+
+        <section id="settings-flyout" class="settings-flyout ">
+            <div class="flyout-container">
+                <a id="flyout-close-button">Close ></a>
+
+                <h1 class="settings-heading">Settings</h1>
+
+                <h2>Map content selection</h2>
+
+                <p>You can choose which items are shown on screen. Activate or deactivated Pathways, Clusters,
+                    Programmes (Educational courses & programmes) to best suit your needs for context and progression
+                    between occupations.
+                </p>
+
+                <div class="settings-toggle-container">
+                    <h2>Descriptions</h2>
+                    <label class="switch"><input type="checkbox" />
+                        <div></div>
+                    </label>
+                </div>
+
+                <div class="settings-toggle-container">
+                    <h2>Pathways and clusters</h2>
+                    <label class="switch"><input type="checkbox" />
+                        <div></div>
+                    </label>
+                </div>
+            </div>
+        </section>
+
         <section class="route-container">
             <h1 class="route-heading">Digital</h1>
 
