help flyout completed with descriptions of filters

--- a/OMapsRoutesWithCards.html
+++ b/OMapsRoutesWithCards.html
@@ -24,7 +24,7 @@
                     <a>
                         <h2>Search</h2>
                     </a>
-                    <a>
+                    <a id="help-button">
                         <h2>Help</h2>
                     </a>
                     <a id="settings-button">
@@ -189,6 +189,44 @@
                         <div></div>
                     </label>
                 </div>
+            </div>
+        </section>
+
+        <section id="help-flyout" class="settings-flyout settings-flyout__not-visible">
+            <div class="flyout-container">
+                <a id="flyout-help-close-button">Close ></a>
+
+                <h1 class="settings-heading">Map key and help</h1>
+
+                <div class="map-labels-container map-labels-container__help-box">
+                    <h2 class="map-labels-heading">Map labels with links to more information</h2>
+                    <div class="map-labels-pills-container">
+                        <div class="map-labels-pills-row">
+                            <div class="blue-pill">A</div>
+                            <p>Apprenticeship</p>
+                        </div>
+                        <div class="map-labels-pills-row">
+                            <div class="red-pill">TL</div>
+                            <p>T Level</p>
+                        </div>
+                        <div class="map-labels-pills-row">
+                            <div class="green-pill">HTQ</div>
+                            <p class="green-pill-text">Higher Technical Qualification</p>
+                        </div>
+                        <div class="map-labels-pills-row">
+                            <div class="yellow-pill">BC</div>
+                            <p>Bootcamp</p>
+                        </div>
+                    </div>
+                </div>
+
+                <p>Discover more Information about </br>- Routes </br>- Pathways </br>- Clusters </br>- Progression</p>
+
+                <h1 class="settings-heading">Help</h1>
+                <h2>Occupational maps guidance</h2>
+                <p>- Map creation and maintenance </br>- Setting the maps to meet your needs </br>- Search and filters
+                    </br>- Export options to PDF for printing </br>- Keeping track of favourite occupations </br>- Your
+                    account and default settings</p>
             </div>
         </section>
 
