tidied up some styling

--- a/OMapsRoutesWithCards.html
+++ b/OMapsRoutesWithCards.html
@@ -17,7 +17,7 @@
             <div class="row middle-xs between-xs omaps-nav-row">
                 <div class="col-xs-5 ifa-logo-container">
                     <div class="ifa-logo"></div>
-                    <h1 class="titleopensans-normal-white-36px">Occupational maps</h1>
+                    <h1 class="omaps-nav-logo-text">Occupational maps</h1>
                 </div>
 
                 <div class="omaps-nav-menu col-xs-6">
@@ -70,14 +70,15 @@
             <div id="intro-without-descriptions-with-pathways"
                 class="intro-without-descriptions-with-pathways intro-text-filters">
                 <p>You are viewing the occupational map(s) without <a class="filters-text-link">descriptions</a>, with
-                    <a class="filters-text-link">pathways and clusters</a> and <a class="map-keys-links">map keys</a>.
+                    <a class="filters-text-link">pathways and clusters</a> and without <a class="map-keys-links">map
+                        keys</a>.
                     There are no active filters.
                 </p>
             </div>
         </div>
         <div id="omaps-header-container" class="omaps-header-container">
             <section class="header-cluster-container header-cluster-container__white">
-                <div class="cluster-name">
+                <div class="cluster-name cluster-name-top">
                     <h2>Cluster name</h2>
                 </div>
                 <div class="occupations-columns">
